Changes to Manage dictionary UI

--- a/Crammer/MainForm.resx
+++ b/Crammer/MainForm.resx
@@ -124,85 +124,84 @@
   <data name="toolStripDropDownButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAARGSURBVEhL3ZVnSF5nFMeTpjSx+KFpFfdArXsr9IOIaN0a
-        BzjAgoqIBhwoWmNV9Jv6RaWIq1VUVKyjDhT3VhJ3FBW3Iu4tipRQ0n/PecgrCbbhLe2nXji87733uef3
-        P+t5Hjz4v1/qFODj/zzI0NDQr11dXTvDw8MPw8LC5pycnCoNDQ0jZWRkviHY038LfOjn59dcWFiImpoa
-        dHV1oaysDNnZ2YiNjf3D3t5+zcHBoVVbW/sHZWXlbwmmRvZQaqidnd0TLy+vxYSEBLAlJSWhubkZxcXF
-        6OjoQF5eHhITE4XRWhDsgKILkhoQExPz2MfHZ9bDwwPOzs5wc3NDREQEcnNz0d3djbW1NayuruL09BRT
-        U1Po6+uDjY1NnNSAjIyMTylFU1QHNDU1ifTEx8eDgVZWVgIaFRWFyspKnJ2dYWxsDNbW1mFSA3ghAcae
-        P3+O6elprKysCNWstrW1FUFBQZCXl4eLiwv29vYwMDAAc3Nz6VNEhZULDg6eYpVzc3N49eoVJicnBYzv
-        uRYqKip49uwZ9vf30dPTA01NTa+PRkBOnw4NDWVSuEOzs7ObkZGRv1MUwllnZyfoGcbHx7G8vCxqoaSk
-        BE9PTxwcHIguoyJ/91HAy5cvfzw5OREfHB0dITk5GRYWFjA1NRWpoFlAVlYWamtrERcXB0VFxTtAe3s7
-        MjMzl/Pz83X/FkIKuy4uLrC1tYXd3V1ER0fDxMQEZmZm0NfX5xRATU0N1PvQ1dWFqqqqABweHopGqK+v
-        R29v77itra3SX0JmZmZenJ+fY2dnR+SVu8bY2FhEYGRkBAMDA+FYS0sLGhoaoAETXcXRNjY2CgALI1gr
-        Ab64B+nv79eg3r5gRWw0C0I1q2fT09ODjo6OAPBzroG7u7sA1NXVobq6Guvr61haWuK2/okAn9+DUIdU
-        cZoYwIp8fX1haWkJdXV1oZidcpr4XkFBQUTAdeO65OTkiBbmgnNT0JRn34MMDw87vH79+i0D+ENO1+jo
-        KEpLS0VEjo6OIk1ycnKQlZUV9/y+pKQERUVFYl1VVZUAkcC3AQEBkQR5dBcJT/DCwsL05eWl6Kbj42Nw
-        Xa6ursTEbm5uglKJgoIC0VU8cBUVFXfGaeJ6cBQTExNITU0dIOdffZCqkZGRWHbGEUjqwTD+z0BOIQvg
-        3POEz8/PgxpEOOQ54YHkZ4uLi0hLSxsm519+AGhpaVGmlyesmh2yIzYJjH/5ngWwEDaOkn+5i9gxbYhv
-        qNCLgYGB/uT8k3vFprz+fH19LdTyjskmcSSJQBIF71GDg4NvGhoaVun8+PUFXdQcruRUMg/3zwkqkg1v
-        x7e3t2AQ283NjYDwINJ28hutWaHiNqSkpHzv7e3tQg41yKQ7Wv39/R9RoWo3Njawvb3NCm/b2tqWysvL
-        f0lPT08ghU7vTrHP/tEW/f7ikJCQJ5RHT2o9f9pVrd91g/TH4nvO/gTec1rxRXT5KwAAAABJRU5ErkJg
-        gg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAARCSURBVEhL3VVXSGVXFJ3JhMwY/Mgkir2gxt4V8iEiGnsX
+        LGBARcQRLCgax6jon/qjEsSWKCoqxhILir0rdkVRsSti76JIGMJkZe/DKDOYDC8kX7mwee/ee+5ea6+1
+        9zlPnvzfL1Uq8Pl/XmRISMjXzs7OHWFhYUehoaHzDg4OFfr6+q+kpKS+IbCX/xbwqa+vb1NBQQGqq6vR
+        2dmJ0tJSZGVlISYm5g9bW9t1Ozu7Fk1NzR8UFRW/JTAViqcSg9rY2Lzw9PRcio+PB0diYiKamppQVFSE
+        9vZ25ObmIiEhQQStBYEdUnWBEgNER0c/9/b2nnNzc4OjoyNcXFwQHh6OnJwcdHV1YX19HWtrazg7O8P0
+        9DR6e3thZWUVKzFAenr6pyTRNPmAxsZGIU9cXBwY0MLCQoBGRkaioqIC5+fnGB0dhaWlZajEALyQAEYj
+        IiIwMzOD1dVVwZrZtrS0IDAwELKysnBycsL+/j76+/thamoquURkrExQUNA0s5yfn8f4+DimpqYEGN+z
+        F0pKSvDw8MDBwQG6u7uhrq7u+dEKKOnLwcHBDCp3cG5ubos0/52qEMk6OjpAzzAxMYGVlRXhhYKCAtzd
+        3XF4eCi6jEz+7qMAY2NjP56enooPjo+PkZSUBDMzMxgbGwspaBaQmZmJmpoaxMbGQl5e/gGgra0NGRkZ
+        K3l5edp/C0IMOy8vL7G9vY29vT1ERUXByMgIJiYm0NXVZQmgoqIC6n1oa2tDWVlZABwdHYlGqKurQ09P
+        z4S1tbXCX4LMzs6+vri4wO7urtCVu8bQ0FBUYGBgAD09PZFYQ0MDampqoAETXcXVNjQ0CAAmRmAtBPDF
+        I5C+vj416u1LZsRBsyBYM3sOHR0daGlpCQB+zh64uroKgNraWlRVVWFjYwPLy8vc1j8RwOePQKhDKlkm
+        BmBGPj4+MDc3h6qqqmDMSVkmvpeTkxMVsG/sS3Z2tmhhNpybgqY86xHI0NCQHXnxlgH4Q5ZrZGQEJSUl
+        oiJ7e3shk4yMDKSlpcU9vy8uLkZhYaFYV1lZKYCI4Ft/f/9XBPLsoRKe4MXFxZmrqyvRTScnJ2Bfrq+v
+        xcRubW2BpER+fr7oKh648vLyh2CZ2A+uYnJyEikpKf2U/KsPpBoeHo7hZFzBvR8Mxv8ZkCVkAqw9T/jC
+        wgKoQURCnhMeSH62tLSE1NTUIUr+5QcAzc3NivTylFlzQk7EcQ/Gv3zPBJgIB1fJv9xFnJg2xDdk9FJA
+        QIAfJf/kkdmk6883NzeCLe+YHPeJ7iu4r4L3qIGBgTf19fVrdH78+pouag5nSno/D4/PCTLJirfju7s7
+        MBDH7e2tAOFBpO3kN1qzSubWJycnf+/l5eVECdUoJDta/fz8npFRNZubm9jZ2WGGd62trctlZWW/pKWl
+        xRNDh3en2Gf/aIt+f3FwcPAL0tGdWs+PdlXLd90g+bH4XrI/AcXdWusSxBOPAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="toolStripDropDownButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAASsSURBVEhLxVVXSGRnGN2IIXYzY49mxlF0xu7Ye8Xu2Ato
-        xIboYKJiDdiwRrF3bNgrogRC3kJICAQS8uRLsk/mIXnY3ST6sCzZGL585ydX1i0Sn3LhY+bOvfec853v
-        fHcePPg/j4ODA9fDw8OYFzVMTU29OzMzs8d1Ojs727C4uCi7t8bj42Ozvb29MQZ/vL+/TxsbG8fLy8tl
-        S0tLjXNzc1/zd5qfnyf+TiMjI533Juju7g5lAjo6OqLt7W3a3d2lzc1NWl9fJyahsbExGh4epoGBAerv
-        7z9nEqd7kVRUVKSsrq7S1tYWra2tiVpZWRGqJycnaXR0lAYHB4mFUGdnJ7W2tl6Ul5fX5+fnF2VnZxfH
-        xsYavpGQvbVhwC92dnaEYoBDKQNQZmYmpaenU15eHlVXV1NzczM1NTWJa0VFRcQElJOTQ6mpqeOvELAl
-        H/JQP2NLfoI9AIfq2tpa8vf3J6Wzihyd3ieF0pnc3dUUFBRMGRkZVFhYSFlZWaJwnpaWJiopKUl3Q3Jy
-        cqLhYT4/PT0lDBWqYVF9fT2p1RqytbMnmVxOMpnssYWFxS9mZmZPFQqlIEZHEjgrp+TkZFEBAQH6GwJW
-        3Hx2doa0CGCkBIOMjIwkh/ccydjY+EeucUNDw48MDAz0RkZG7XK5bNfBweEyLCxMdAEiVi0qNDT0D7lc
-        7nlDwENahmopJZxtamtrIx8fX2LF53xjMVcglw9XAFccV66JiUmXQqF4BO9zc3MpISFBqm9uzUCn0w2W
-        lpbS+Pg4LSwsEA+aGhoa2Gv3p6amph/wzaYvDe1tPldxZZibm69wav4uKSmhmJgYUXx+lZiYmC89wx0b
-        RanV6p3GxsZnWJ6JiQlqaWkRrYaEhADoTYcDX9DzDB4hSbA0IiKCwsPDydPT8zo4OPhjPIjMekNNb2/v
-        BXKOJULG0TYP7M5NtbS0LOCkXRYXFxPmwaI4YUHE4OTt7f1QUmbAnn/CBNcA7+vro56eHtLr9cSL86yg
-        oAAzeOWws7Mz5X34FPOKj48n7laAc4IoMDCQZ+jzpXhoenpawf4/wYYCHOrb29uJN1okhOdzXVlZuVpT
-        UxPP5VpXV6fmGeVzOL7q6uqCCAGMAvC/4OTi4rIgCDi/UVVVVX8NDQ0J5R0dHVRWVibyzQEQG4rNRUe8
-        uU8Y/BICEAQslQSu1WqFei8vL3J0dEQCSwQBx82PQS7QKh4CIIBBgHynpKSI5cGrAnPB6wDn8FtSDHAs
-        HoP/6uzs3MP2ZcBCyVeZUqmcA1h0dDSpVCqRBJxjO7E8yDgiiJQAGH5jkCAAsK+vLzwnPz+/2tfN6y3+
-        MUaj0XzOvn3HyfiWPy+hCgQAj4uLE+RSFEECAoADGLbw8/D9tQQgRTtaLmysll8LzdzVQ3gM5RI4oghQ
-        qdABx5E8PDwIgpi47469uXXJwNbWtgZbCvVQDtvc3NyIvSVXV9ffeZBXbInIPwbN9z3nud36i72TjF8D
-        ah72FWII7+GzlZXVOf+us7e392ArtfwG2GbwP9mm76OiolL/q3rpvndYeTdb9APb8JuTk9PPTBD8MgiD
-        B9rY2JjdF/zF+835v8DL2tra7b4g/wDA8ZXzybxRJgAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAASsSURBVEhLxVVZSFxnGE3FUtfYGfdqR43ouO9rYlxx33fQ
+        ioqIiq2KMabgEjTGKu5rUBPcV0QplL6V0lIotPTJlzZP9qF9SNJWH0Joavl6zk9HYhapT73wMXPn3nvO
+        +c53vjuXLv2fx+bmpvvW1lbsixrGxsbenZiYWEftTU5ONs3OzmourHFnZ8difX19COCPNzY2ZHFxcWdu
+        bq7i3r17zVNTU1/ju0xPTwu+y8DAQMeFCbq6uiJBINvb27KysiJra2uytLQkDx48EJDI0NCQ9Pf3y507
+        d6S3t/cAJM4XIqmqqkpdWFiQ5eVluX//vqr5+XmlenR0VAYHB6Wvr08gRDo6OqStre2wsrKysbCwsCQ3
+        N7c0Li7O+I2E8NYWgF+srq4qxQSnUgBIVlaWZGRkSEFBgdTU1Ehra6u0tLSoayUlJQICycvLk7S0tOFX
+        CGDJhxjqZ7DkJ9pDcKquq6uToKAgcXF1Eyfn90Xn4iqennoJCwuXzMxMKS4ulpycHFU8T09PV5WcnJx9
+        SrK7u+uFYT7f29sTDpWqaVFjY6Po9V5iZ+8gGq1WNBrN48uXL/9iYWHxVKdzUcTsyAAO5ZKSkqIqJCSk
+        4ZQAilv39/eZFgXMlHCQ165dE8f3nMTU1PRH1LCxsfFHRkZGDSYmJu1arWbN0dHxKCoqSnVBIqhWFRkZ
+        +YdWq/U5JcCQ5qjakBJkW27evCn+/gECxQe4sRQVivJHhaDiUflmZmadOp3uEb3Pz8+XxMREQ31zZgbZ
+        2dl95eXlMjw8LDMzM4JBS1NTE7z2fGpubv4BbjZ/aWhv49wNlWlpaTmP1PxdVlYmsbGxqnB+nJSUVGh4
+        Bh2bxOj1+tXm5uZnXJ6RkRG5ceOGajUiIoJAbzoccaEBM3jEJNHSq1evSnR0tPj4+JyEh4d/zAeZWT+q
+        uX379iFzziVixtk2BnbuplpZWRUhaUelpaXCeUAUEhYmABc/P7+HBmVG8PwTEJwQvKenR7q7u6WhoUGw
+        OM+Kioo4g1cOe3t7c+zDp5xXQkKCoFsFjgRJaGgoZuj/pXpofHxcB/+fcEMJTvXt7e2CjVYJwXxOqqur
+        F2praxNQ7vX19XrMqBDh+Kqzs5MiFDCLwP+Cy5UrV2YUAfIbA4C/7t69q5TfunVLKioqVL4RALWh3Fx2
+        hM19AvAjCmAQuFQG8ODgYKXe19dXnJycmMAyRYC4BQLkkK3yIQISmATMd2pqqloevio4F74OeE6/DYoJ
+        zsUD+K+urq7dsC+TFhp81bi4uEwR7Pr16+Lm5qaSwHNuJ5eHGWcEmRIC028OkgQEDggIoOcSGBhY97p5
+        vYUfY728vD6Hb98hGd/i84iqSEDw+Ph4RW6IIklIQHAC0xY8T99fS0BSthOM4sYG47XQiq4e0mMqN4Az
+        igQ1FDtAHMXb21soCMQ95+zNmUtGdnZ2tdxSqqdy2ubh4SHwVtzd3X/HII9hico/B437nmNuZ/5izyXD
+        a0CPYR8zhvSePltbWx/g92wHBwdvWBmMN8AKwP+ETd/HxMSk/Vf1hvvegfIuWPQDbPjN2dn5ZxCEvwwC
+        8FBbW1uLi4K/eL8l/gt8bWxsPC4K8g+21JXwibjjRQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="toolStripDropDownButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYvSURBVEhLxZV5UBNnGMZbx+mMMx6tVPCgnuA1Hu3o2Kl/
-        KLXKJQJVsR6Ajsc4dryo44i2iNWhXljqQImQACEQQkiQKyQESEIIkGQTE0JAwAQChEA4NKhoPWqffqxj
-        q22tbf/pzuzs7O63z+/dZ5/33bfe+r+3We7uHumZmSFyufycXq/PMer1hZRGw5dKJJdZrJStGwMDZ/yn
-        Gr0mT55UVlb2tcViab47dAc/P36Exw8f4MH9uxi+58I91210d9qgVqs78/Pz40NDQ+f8Y1BcXNzqtlu3
-        dM+ePsaQ6y7MN22o0rRCorKgRGlFcdUtlFU3gzK0wmHvxqCzB+q6OusPiYlhb4QkJiYG9fTYBp6Sio1m
-        K8rr2iGlnCjT30GxegD51X3gyXvBlvaAKeoEu6QZKm0ThgadUCgUjxkMxv7XQmJjY1fY7Xbng/v3UUO1
-        olLvhNI0hEqDCzKdA6aWbrRau9HYYoeCsiFN1I4rgi5EXzPhe3YN+hzkOoFcjIsL/SvI2IYGQ/WTRz9B
-        RbVAbhigxSv0tyHR9KC9vRONDfWgKB2sLY24098DU6MVF7LM2H+lAd5bRYhLkRG7HCOQtqCwsOmvQDjZ
-        2XseDN9DvdmCcqoXCpML5fpBlBBbFLoO3DCYkFZgxLWCZjAFFAzk3DXQiyL5TWw4UYOZYSLM3shHoURD
-        w7lZ3AsvA8aYzWal644Lkhor5EYXyqjn4vmqfoiVN5EnMYFZ6sDV63acTrcgu1hHVyurNWNRuAgzNxXA
-        Y30ego/kwenogqpaafPz85tCQ44dO7bMarUOm5ttENX2QELdRnFdP/1BBUonOOUOxOfZcCrtFo4kNiE8
-        zgCmUI/Bng5cSpXCM1iA6aF5mLYhB9MC0iGupNDW2oTz58+H0AAOh7Nj+O4QFOoWIjyAwtp+CJV94Fc5
-        cZnfgS1nTfjkoBpL9ygxN1yGVQek0BuaYNDr4bM3F1OD+JgWxMXUQA7e/ZSJcz9KyNvZiU1Zp2hAaWnp
-        yYekgUSKZlwnlvAVTnBlTkQzLVh+QI25EUrMi5DDa1sFFoaXQlBKoaleh+3Hc+ERwKXFpwRkYrJ/Bt5b
-        w8KXZwsw2NuFvNzcJBpQIZV+e5906/XKZuQQ4ZGMn2RZ8OG+OizYqcTCnQrMD68gSREjiauCUadGWFQO
-        JvlnYer6bCLOhodfOr2PAKIuimgAj8dLpQFCofAr1yDxW9oIRnE34rLbsPKQGvMjq7AwUk7Ey0lKShER
-        I4WB0mJTFA8TfbMwJTCLVP27uLtvOrGJjUtMGfq6O8Hn8RJoQEJCwsYumxUlMjPOZFoQdsZILFFgQaQM
-        83ZI4UUy7vl5Ac4ml4MrrMT769iYTPweseRF5SNHt7UsfBSeiwKJFnail5aaepQGBAcHz6O06j5jgwXf
-        MM34+EANbcnc7WXw+kKEWZsL4RkiQOBBAVI4YswOYcPd71XxkeonkX3fOSmM9Y0w3ZA8OXHixJoXvTCq
-        qKhI0N/rQKqwHot2yeC9TQKvLSWYRfI9I1RAosiDm28mlm9nY4ofixZ7ufqR9KzeX4CMfA09ZaVisd7N
-        zW3cb80WHR3tT0bBE5XGjGW7CvHBxiLSPNcxPYQPT5Jvd79MRJwqgkxVj9NXxfDwZZFrzyETiPjS7Xxc
-        yFBDS9XD0nITCfHxB/44j0bl5uSw+kgXpgtqMCOEC/fA3OcRJH67fZYGFk+G4f42VMqqMGcDk3ieRosv
-        ixDguzQt5Coj7B3tIP+HSiI+/k8Db/HixZ5isbh2sNcOVi6J52Y2xq5Ow8S16eTDpsNndybik4XYcpSN
-        CT6pdIJ8D5XgCkcDZa0Jtwf6UKVQWCO3Ri557cgm82NemUik6nd0okZdj70xQngHMzFuFQPvrLyGt1ck
-        YbwPE8sj+ThyqQI5xVoyCM2070S8Jer48dWvFX9xw9vbexppc4bphu5hHwFpdY3EniqcvFKCqAtFSMiQ
-        Q6q4gcamFhLH9pHx/EwoEOT5+/svfKP4SwtGHz58eF2+MI+tVVXbquXSXxwdFvR2taHbZoHZqIemVuEo
-        EArzY2JiNpHnxvwb8VfWrliyZBYRCUhOTt6dwmAcZCQl7TsbGxvs6+s7nywc/XfCvwJYbJUaJ0f2TwAA
-        AABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYtSURBVEhLxZV5UBNnGMZbx+mMMx6tVPCgnuDBeLSjY6f+
+        odYqICJQFesB6HiMY8eLOo5oi1gd6oWlDpQICRDOEBLukANIQgiQZBMSQjhNIEAIhEODitaj9unHOrba
+        1tr2n+7Mzs7ufvv83n32ed99663/e5vj6uqWkpYWKJPJLup0umyDTldIqdVciUh0jcVK3LHFz2/Wf6rR
+        Y+rUKWKx+Guz2dxyd/gOfn78CI8fPsCD+3cxcs+Je87b6OmyQqVSdeXl5cUEBQXN+8eg6OjoNe23bmmf
+        PX2MYeddmJqtqFS3QaQ0o0RhQXHlLYirWkDp22C39WDI0QtVba3lh7i44DdC4uLi/Ht7rYNPScUGkwVl
+        tR2QUA6IdXdQrBpEXlU/OLI+sCW9YAq6wC5pgVLThOEhB+Ry+WMGg3HotZCoqKiVNpvN8eD+fVRTbajQ
+        OaAwDqNC74RUa4extQdtlh40ttogp6xIFnTgOq8bETeN+J5djX47uU4gV6Kjg/4KMr6hQV/15NFPUFKt
+        kOkHafFy3W2I1L3o6OhCY0M9KEoLS2sj7gz0wthoweUMEw5db4DnDgGiE6XELvsopN0/OHjmK5D0zMz9
+        D0buod5kRhnVB7nRiTLdEEqILXJtJ+r0RiQXGHCzoAVMHgU9OXcO9qFI1ozNp6sxO1iAuVu4KBSpaXhW
+        RtbllwHjTCaTwnnHCVG1BTKDE2LquXiecgBCRTNyRUYwS+24kW/DuRQzMou1dLXSGhMWhwgwe2sB3Dbl
+        IuB4Lhz2biirFFYfH59pNOTkyZPLLRbLiKnFCkFNL0TUbRTXDtAflKdwIL3MjphcK84m38LxuCaEROvB
+        5Osw1NuJq0kSuAfwMDMoFzM2Z2PGxhQIKyi0tzXh0qVLgTQgPT1998jdYchVrUR4EIU1A+Ar+sGtdOAa
+        txPbLxjxyREVlu1XYH6IFKsPS6DTN0Gv02HtgRxM9+dihn8Wpvul491Pmbj4o4i8nY3YlHGWBpSWlp55
+        SBpIIG9BPrGEK3cgS+pABNOMFYdVmB+qwIJQGTx2lsMrpBS8UgpN9VrsOpUDt41ZtPi0jWmY6puK99ax
+        8OWFAgz1dSM3JyeeBpRLJN/eJ92aX9GCbCI8mvEzLDM+PFiLRXsU8Nojx8KQcpIUIeKzlDBoVQgOz8YU
+        3wxM35RJxNlw80mh91FA+BUBDeBwOEk0gM/nf+UcIn5LGsEo7kF0ZjtWHVVhYVglvMJkRLyMpKQUoZES
+        6CkNtoZzMNk7A9P8MkjVv4u7eqcQm9i4ypSiv6cLXA4nlgbExsZu6bZaUCI14XyaGcHnDcQSORaFSbFg
+        twQeJOPunxfgQkIZsvgVeH8DG1OJ36OWvKh89OiynoWPQnJQINLARvSSk5JO0ICAgIAFlEbVb2gw4xum
+        CR8frqYtmb9LDI8vBJizrRDugTz4HeEhMV2IuYFsuPq8Kj5a/RSyH7wogaG+EcY64ZPTp0+ve9ELY4qK
+        ingDfXYk8euxeK8UnjtF8Nhegjkk37OCeCSKHLh4p2HFLjam+bBosZerH03PmkMFSM1T01NWIhTqXFxc
+        JvzWbBEREb5kFDxRqk1YvrcQH2wpIs2Tj5mBXLiTfLv6pCH0bBGkynqcuyGEmzeLXHsOmUTEl+3i4nKq
+        ChqqHubWZsTGxBz+4zwak5OdzeonXZjCq8aswCy4+uU8jyDx2+WzZLA4UowMtKNCWol5m5nE82RafHko
+        D98layBTGmDr7AD5P1QQ8Yl/GnhLlixxFwqFNUN9NrBySDy3sTF+TTImr08hHzYFa/elISaBj+0n2Ji0
+        NolOkPfRElxPV0NRY8TtwX5UyuWWsB1hS187ssn8WCAWCJQD9i5Uq+pxIJIPzwAmJqxm4J1VN/H2ynhM
+        XMvEijAujl8tR3axhgxCE+07EW8NP3VqzWvFX9zw9PScQdqcYazTPuwnII22kdhTiTPXSxB+uQixqTJI
+        5HVobGolcewYHc/P+Dxerq+vr9cbxV9aMPbYsWMb8vi5bI2yyqqQin+xd5rR192OHqsZJoMO6hq5vYDP
+        z4uMjNxKnhv3b8RfWbty6dI5RGRjQkLCvkQG4wgjPv7ghaioAG9v74Vk4di/E/4VU5aVFoS6AQ0AAAAA
+        SUVORK5CYII=
 </value>
   </data>
   <metadata name="openFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
