Re-arranged menu items

--- a/Crammer/MainForm.resx
+++ b/Crammer/MainForm.resx
@@ -124,25 +124,25 @@
   <data name="toolStripDropDownButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAARCSURBVEhL3VVXSGVXFJ3JhMwY/Mgkir2gxt4V8iEiGnsX
-        LGBARcQRLCgax6jon/qjEsSWKCoqxhILir0rdkVRsSti76JIGMJkZe/DKDOYDC8kX7mwee/ee+5ea6+1
-        9zlPnvzfL1Uq8Pl/XmRISMjXzs7OHWFhYUehoaHzDg4OFfr6+q+kpKS+IbCX/xbwqa+vb1NBQQGqq6vR
-        2dmJ0tJSZGVlISYm5g9bW9t1Ozu7Fk1NzR8UFRW/JTAViqcSg9rY2Lzw9PRcio+PB0diYiKamppQVFSE
-        9vZ25ObmIiEhQQStBYEdUnWBEgNER0c/9/b2nnNzc4OjoyNcXFwQHh6OnJwcdHV1YX19HWtrazg7O8P0
-        9DR6e3thZWUVKzFAenr6pyTRNPmAxsZGIU9cXBwY0MLCQoBGRkaioqIC5+fnGB0dhaWlZajEALyQAEYj
-        IiIwMzOD1dVVwZrZtrS0IDAwELKysnBycsL+/j76+/thamoquURkrExQUNA0s5yfn8f4+DimpqYEGN+z
-        F0pKSvDw8MDBwQG6u7uhrq7u+dEKKOnLwcHBDCp3cG5ubos0/52qEMk6OjpAzzAxMYGVlRXhhYKCAtzd
-        3XF4eCi6jEz+7qMAY2NjP56enooPjo+PkZSUBDMzMxgbGwspaBaQmZmJmpoaxMbGQl5e/gGgra0NGRkZ
-        K3l5edp/C0IMOy8vL7G9vY29vT1ERUXByMgIJiYm0NXVZQmgoqIC6n1oa2tDWVlZABwdHYlGqKurQ09P
-        z4S1tbXCX4LMzs6+vri4wO7urtCVu8bQ0FBUYGBgAD09PZFYQ0MDampqoAETXcXVNjQ0CAAmRmAtBPDF
-        I5C+vj416u1LZsRBsyBYM3sOHR0daGlpCQB+zh64uroKgNraWlRVVWFjYwPLy8vc1j8RwOePQKhDKlkm
-        BmBGPj4+MDc3h6qqqmDMSVkmvpeTkxMVsG/sS3Z2tmhhNpybgqY86xHI0NCQHXnxlgH4Q5ZrZGQEJSUl
-        oiJ7e3shk4yMDKSlpcU9vy8uLkZhYaFYV1lZKYCI4Ft/f/9XBPLsoRKe4MXFxZmrqyvRTScnJ2Bfrq+v
-        xcRubW2BpER+fr7oKh648vLyh2CZ2A+uYnJyEikpKf2U/KsPpBoeHo7hZFzBvR8Mxv8ZkCVkAqw9T/jC
-        wgKoQURCnhMeSH62tLSE1NTUIUr+5QcAzc3NivTylFlzQk7EcQ/Gv3zPBJgIB1fJv9xFnJg2xDdk9FJA
-        QIAfJf/kkdmk6883NzeCLe+YHPeJ7iu4r4L3qIGBgTf19fVrdH78+pouag5nSno/D4/PCTLJirfju7s7
-        MBDH7e2tAOFBpO3kN1qzSubWJycnf+/l5eVECdUoJDta/fz8npFRNZubm9jZ2WGGd62trctlZWW/pKWl
-        xRNDh3en2Gf/aIt+f3FwcPAL0tGdWs+PdlXLd90g+bH4XrI/AcXdWusSxBOPAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAARESURBVEhL3ZVnSF5nFMeTpjSx+KFpFfcgse6t0A8ionXF
+        LTjAgoqoERwoWmNV9Jv6RaWIq42oqFhHHSjurbgVRcWtiHuLIiWU9N9zHvJKgm14S/upFw7ve+997vn9
+        z3qeBw/+75c6Bfj4Pw8yODj4a2dn5/bQ0NDDkJCQOQcHh3J9ff2XMjIy3xDs6b8FPvTx8WksKChAVVUV
+        Ojo6UFJSgqysLMTExPxha2u7Zmdn1/z8+fMflJWVvyWYGtlDqaE2NjZPPDw8FuPj48GWmJiIxsZGFBUV
+        oa2tDbm5uUhISBBGa0GwA4ouQGpAdHT0Yy8vr1lXV1c4OjrixYsXCA8PR05ODjo7O7G2tobV1VWcnp5i
+        amoKPT09sLKyipUakJ6e/imlaIrqgIaGBpGeuLg4MNDCwkJAIyMjUV5ejrOzM4yMjMDS0jJEagAvJMBI
+        REQEpqensbKyIlSz2ubmZgQEBEBeXh5OTk7Y29tDX18fTE1NpU8RFVYuMDBwilXOzc1hbGwMk5OTAsb3
+        XAsVFRW4u7tjf38fXV1d0NTU9PhoBOT06cDAQAaFOzA7O7sZFhb2O0UhnLW3t4OeYXx8HMvLy6IWSkpK
+        cHNzw8HBgegyKvJ3HwWMjo7+eHJyIj44OjpCUlISzMzMYGxsLFJBs4DMzExUV1cjNjYWioqKd4DW1lZk
+        ZGQs5+Xlaf8thBR2XFxcYGtrC7u7u4iKioKRkRFMTEygq6vLKYCamhqo96GtrQ1VVVUBODw8FI1QW1uL
+        7u7ucWtra6W/hMzMzLw6Pz/Hzs6OyCt3jaGhoYjAwMAAenp6wvGzZ8+goaEBGjDRVRxtfX29ALAwgjUT
+        4It7kN7eXg3q7QtWxEazIFSzejYdHR1oaWkJAD/nGri4uAhATU0NKisrsb6+jqWlJW7rnwjw+T0IdUgF
+        p4kBrMjb2xvm5uZQV1cXitkpp4nvFRQURARcN65Ldna2aGEuODcFTXnWPcjg4KAdpeotA/hDTtfw8DBe
+        v34tIrK3txdpkpOTg6ysrLjn98XFxSgsLBTrKioqBIgEvvXz83tJkEd3kfAELywsTF9eXopuOj4+Btfl
+        6upKTOzm5iYolcjPzxddxQNXVlZ2Z5wmrgdHMTExgZSUlD5y/tUHqRoaGophZxyBpB4M4/8M5BSyAM49
+        T/j8/DwoauGQ54QHkp8tLi4iNTV1kJx/+QGgqalJmV6esGp2yI7YJDD+5XsWwELYOEr+5S5ix7QhvqFC
+        L/r7+/uS80/uFZvy+vP19bVQyzsmm8SRJAJJFLxH9ff3v6mrq1ul8+PXV3RRcziTU8k83D8nqEhWvB3f
+        3t6CQWw3NzcCwoNI28lvtGaFiluXnJz8vaenpxM51CCT7mj19fV9RIWq3tjYwPb2Niu8bWlpWSotLf0l
+        LS0tnhQ6vDvFPvtHW/T7i4OCgp5QHt2o9XxpV7V81w3SH4vvOfsTrUda5Vc/N6kAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="toolStripDropDownButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -162,46 +162,46 @@
         Bh2bxOj1+tXm5uZnXJ6RkRG5ceOGajUiIoJAbzoccaEBM3jEJNHSq1evSnR0tPj4+JyEh4d/zAeZWT+q
         uX379iFzziVixtk2BnbuplpZWRUhaUelpaXCeUAUEhYmABc/P7+HBmVG8PwTEJwQvKenR7q7u6WhoUGw
         OM+Kioo4g1cOe3t7c+zDp5xXQkKCoFsFjgRJaGgoZuj/pXpofHxcB/+fcEMJTvXt7e2CjVYJwXxOqqur
-        F2praxNQ7vX19XrMqBDh+Kqzs5MiFDCLwP+Cy5UrV2YUAfIbA4C/7t69q5TfunVLKioqVL4RALWh3Fx2
+        F2praxNQ7vX19XrMqBDh+Kqzs5MiFDCLwP+Cy5UrV2YUAfIbA7C/7t69q5TfunVLKioqVL4RALWh3Fx2
         hM19AvAjCmAQuFQG8ODgYKXe19dXnJycmMAyRYC4BQLkkK3yIQISmATMd2pqqloevio4F74OeE6/DYoJ
         zsUD+K+urq7dsC+TFhp81bi4uEwR7Pr16+Lm5qaSwHNuJ5eHGWcEmRIC028OkgQEDggIoOcSGBhY97p5
         vYUfY728vD6Hb98hGd/i84iqSEDw+Ph4RW6IIklIQHAC0xY8T99fS0BSthOM4sYG47XQiq4e0mMqN4Az
         igQ1FDtAHMXb21soCMQ95+zNmUtGdnZ2tdxSqqdy2ubh4SHwVtzd3X/HII9hico/B437nmNuZ/5izyXD
         a0CPYR8zhvSePltbWx/g92wHBwdvWBmMN8AKwP+ETd/HxMSk/Vf1hvvegfIuWPQDbPjN2dn5ZxCEvwwC
-        8FBbW1uLi4K/eL8l/gt8bWxsPC4K8g+21JXwibjjRQAAAABJRU5ErkJggg==
+        8FBbW1uLi4K/eL8l/gt8bWxsPC4K8g+st5XtV4LeYwAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="toolStripDropDownButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYtSURBVEhLxZV5UBNnGMZbx+mMMx6tVPCgnuDBeLSjY6f+
-        odYqICJQFesB6HiMY8eLOo5oi1gd6oWlDpQICRDOEBLukANIQgiQZBMSQjhNIEAIhEODitaj9unHOrba
-        1tr2n+7Mzs7ufvv83n32ed99663/e5vj6uqWkpYWKJPJLup0umyDTldIqdVciUh0jcVK3LHFz2/Wf6rR
-        Y+rUKWKx+Guz2dxyd/gOfn78CI8fPsCD+3cxcs+Je87b6OmyQqVSdeXl5cUEBQXN+8eg6OjoNe23bmmf
-        PX2MYeddmJqtqFS3QaQ0o0RhQXHlLYirWkDp22C39WDI0QtVba3lh7i44DdC4uLi/Ht7rYNPScUGkwVl
-        tR2QUA6IdXdQrBpEXlU/OLI+sCW9YAq6wC5pgVLThOEhB+Ry+WMGg3HotZCoqKiVNpvN8eD+fVRTbajQ
-        OaAwDqNC74RUa4extQdtlh40ttogp6xIFnTgOq8bETeN+J5djX47uU4gV6Kjg/4KMr6hQV/15NFPUFKt
-        kOkHafFy3W2I1L3o6OhCY0M9KEoLS2sj7gz0wthoweUMEw5db4DnDgGiE6XELvsopN0/OHjmK5D0zMz9
-        D0buod5kRhnVB7nRiTLdEEqILXJtJ+r0RiQXGHCzoAVMHgU9OXcO9qFI1ozNp6sxO1iAuVu4KBSpaXhW
-        RtbllwHjTCaTwnnHCVG1BTKDE2LquXiecgBCRTNyRUYwS+24kW/DuRQzMou1dLXSGhMWhwgwe2sB3Dbl
-        IuB4Lhz2biirFFYfH59pNOTkyZPLLRbLiKnFCkFNL0TUbRTXDtAflKdwIL3MjphcK84m38LxuCaEROvB
-        5Osw1NuJq0kSuAfwMDMoFzM2Z2PGxhQIKyi0tzXh0qVLgTQgPT1998jdYchVrUR4EIU1A+Ar+sGtdOAa
-        txPbLxjxyREVlu1XYH6IFKsPS6DTN0Gv02HtgRxM9+dihn8Wpvul491Pmbj4o4i8nY3YlHGWBpSWlp55
-        SBpIIG9BPrGEK3cgS+pABNOMFYdVmB+qwIJQGTx2lsMrpBS8UgpN9VrsOpUDt41ZtPi0jWmY6puK99ax
-        8OWFAgz1dSM3JyeeBpRLJN/eJ92aX9GCbCI8mvEzLDM+PFiLRXsU8Nojx8KQcpIUIeKzlDBoVQgOz8YU
-        3wxM35RJxNlw80mh91FA+BUBDeBwOEk0gM/nf+UcIn5LGsEo7kF0ZjtWHVVhYVglvMJkRLyMpKQUoZES
-        6CkNtoZzMNk7A9P8MkjVv4u7eqcQm9i4ypSiv6cLXA4nlgbExsZu6bZaUCI14XyaGcHnDcQSORaFSbFg
-        twQeJOPunxfgQkIZsvgVeH8DG1OJ36OWvKh89OiynoWPQnJQINLARvSSk5JO0ICAgIAFlEbVb2gw4xum
-        CR8frqYtmb9LDI8vBJizrRDugTz4HeEhMV2IuYFsuPq8Kj5a/RSyH7wogaG+EcY64ZPTp0+ve9ELY4qK
-        ingDfXYk8euxeK8UnjtF8Nhegjkk37OCeCSKHLh4p2HFLjam+bBosZerH03PmkMFSM1T01NWIhTqXFxc
-        JvzWbBEREb5kFDxRqk1YvrcQH2wpIs2Tj5mBXLiTfLv6pCH0bBGkynqcuyGEmzeLXHsOmUTEl+3i4nKq
-        ChqqHubWZsTGxBz+4zwak5OdzeonXZjCq8aswCy4+uU8jyDx2+WzZLA4UowMtKNCWol5m5nE82RafHko
-        D98layBTGmDr7AD5P1QQ8Yl/GnhLlixxFwqFNUN9NrBySDy3sTF+TTImr08hHzYFa/elISaBj+0n2Ji0
-        NolOkPfRElxPV0NRY8TtwX5UyuWWsB1hS187ssn8WCAWCJQD9i5Uq+pxIJIPzwAmJqxm4J1VN/H2ynhM
-        XMvEijAujl8tR3axhgxCE+07EW8NP3VqzWvFX9zw9PScQdqcYazTPuwnII22kdhTiTPXSxB+uQixqTJI
-        5HVobGolcewYHc/P+Dxerq+vr9cbxV9aMPbYsWMb8vi5bI2yyqqQin+xd5rR192OHqsZJoMO6hq5vYDP
-        z4uMjNxKnhv3b8RfWbty6dI5RGRjQkLCvkQG4wgjPv7ghaioAG9v74Vk4di/E/4VU5aVFoS6AQ0AAAAA
-        SUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYvSURBVEhLxZV5UBNnGMZbx+mMMx6tVBClnuA1Hu3o2Kl/
+        qLUKiAhUxXoAOh7j2PGijiPaIlaHemGpAyVKAoZACCFBrpAQIAkhQJJNTAgBARMIEALh0ICA9ah9+rGO
+        rba1tv2nO7Ozs7vfPr93n33ed9966//eZrq7e6SmpQXL5fLzer0+06jX51EaDV8qkVxhsW5s2xQQMP0/
+        1eg9efKk4uLiry0WS8NA/338/PgRHj8cxvDgAIYeuPDAdQ8dbTao1eq2nJycuJCQkNn/GBQbG7uq+e5d
+        3bOnj9HvGoD5jg3lmiZIVBYUKq0oKL+L4ooGUIYmOOwd6HN2Ql1dbf0hISH0jZCEhITAzk5b71NSsdFs
+        RUl1C6SUE8X6+yhQ9yKnohs8eRfY0k4wRW1gFzZApa1Hf58TCoXiMYPBOPBaSExMzHK73e4cHhxEJdWE
+        Mr0TSlM/ygwuyHQOmBo70GTtQF2jHQrKhhRRC64K2hF13YTv2ZXodpDrBHIpNjbkryBja2sNFU8e/QQV
+        1Qi5oZcWL9Xfg0TTiZaWNtTV1oCidLA21uF+TydMdVZcTDfjwNVa+GwTIfaGjNjlGIE0B4aGTnsFwsnI
+        2Ds89AA1ZgtKqC4oTC6U6PtQSGxR6Fpx22BCSq4R13MbwBRQMJBzV28X8uV3sPFkJWaEijBrEx95Eg0N
+        56ZzL74MGGM2m5Wu+y5IKq2QG10opp6L56h6IFbeQbbEBGaRA9du2XEm1YKMAh1drazKjIVhIszYnAuP
+        DdkIOpoNp6Mdqgqlzc/Pz5OGHD9+fKnVah0yN9ggquqEhLqHguoe+oMKlE5wShyIy7bhdMpdHE2oR1is
+        AUyhHn2drbicLIVXkADTQrIxdWMmpq5PhbiMQnNTPS5cuBBMAzgczs6hgX4o1I1EuBd5VT0QKrvBL3fi
+        Cr8VW8+Z8MkhNZbsVWJOmAwrD0qhN9TDoNdj9b4sTAnkY2ogF1MCOHj3UybO/yghb2cnNqWfpgFFRUWn
+        HpIGEikacItYwlc4wZU5EcW0YNlBNeaEKzE3XA7v7aVYEFYEQRGF+hoddpzIgsd6Li3uuT4Nk/1v4r01
+        LHx5Lhd9Xe3IzspKpAGlUum3g6Rbb5U1IJMIj2T8FMuCD/dXY/4uJRbsUmBeWClJihiJXBWMOjVCIzMx
+        yT8dUzZkEHE2PPxS6X0EEHlJRAN4PF4yDRAKhV+5+ojf0jowCjoQm9GMFYfVmBdRjgURciJeQlJShPBo
+        KQyUFpsjeZjomw7PgHRS9e/i7r6pxCY2LjNl6O5oA5/Hi6cB8fHxm9ptVhTKzDibZkHoWSOxRIH5ETLM
+        3SmFN8m41+e5OJdUAq6wDO+vY2My8XvEkheVjxzd1rLwUVgWciVa2IleSnLyMRoQFBQ0l9Kqu421FnzD
+        NOPjg5W0JXN2FMP7CxFmbsmDV7AAAYcEuMERY1YwG+5+r4qPVD+J7PvPS2GsqYPpdtGTkydPrnnRC6Py
+        8/MFPV0OJAtrsHC3DD7bJfDeWoiZJN/TQwQkijy4+aZh2Q42PP1YtNjL1Y+kZ9WBXNzM0dBTVioW693c
+        3Mb91mxRUVH+ZBQ8UWnMWLo7Dx9syifNcwvTgvnwIvl290tD+Ol8yFQ1OHNNDA9fFrn2HDKBiC/ZwcfF
+        m2poqRpYGu8gPi7u4B/n0aiszExWN+nCVEElpgdz4R6Q9TyCxG+3z1LA4skw1NOMMlk5Zm9kEs9TaPGl
+        4QJ8l6KFXGWEvbUF5P9QRsTH/2ngLVq0yEssFlf1ddnByiLx3MLG2FUpmLg2lXzYVKzek4a4JCG2HmNj
+        wupkOkG+hwtxlaOBssqEe73dKFcorBHbIha/dmST+TG3WCRS9TjaUKmuwb5oIXyCmBi3koF3VlzH28sT
+        MX41E8si+Dh6uRSZBVoyCM2070S8MfLEiVWvFX9xw8fHZyppc4bptu5hNwFpdXXEnnKculqIyIv5iL8p
+        h1RxG3X1jSSOLSPj+ZlQIMj29/df8EbxlxaMPnLkyLocYTZbq6qwlZdJfnG0WtDV3owOmwVmox6aKoUj
+        VyjMiY6O3kyeG/NvxF9Zu3zx4plEZH1SUtKeGwzGIUZi4v5zMTFBvr6+88jC0X8n/CtOwJUSRsLuiQAA
+        AABJRU5ErkJggg==
 </value>
   </data>
   <metadata name="openFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
